feat: dockerize my backend with PostgreSQL

--- a/Backend/src/main/resources/application-prod.properties
+++ b/Backend/src/main/resources/application-prod.properties
@@ -1,21 +1,25 @@
-# Production database (externalized via environment variables)
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/blog_prod}
-spring.datasource.username=${DB_USERNAME:blog_user}
-spring.datasource.password=${DB_PASSWORD}
+# Production database (PostgreSQL)
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/blogdb}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Production JWT settings (externalized)
+# Production JWT settings
 app.jwt.secret=${JWT_SECRET}
-app.jwt.expiration=PT24H
+app.jwt.expiration=${JWT_EXPIRATION:PT24H}
 
 # Production database settings
-app.database.ddl-auto=none
+app.database.ddl-auto=update
 app.database.show-sql=false
 app.database.enable-h2-console=false
 
 # Production JPA settings
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Disable H2 console in production
 spring.h2.console.enabled=false
 
 # Production logging
@@ -23,7 +27,21 @@ logging.level.com.rachnit.blog01=INFO
 logging.level.org.springframework.security=WARN
 logging.level.root=WARN
 
-# Production performance settings
-spring.jpa.properties.hibernate.jdbc.batch_size=20
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true
+# CLOUDINARY CONFIGURATION
+cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api-key=${CLOUDINARY_API_KEY}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET}
+
+# MEDIA UPLOAD CONFIGURATION (same as dev)
+media.upload.max-image-size=5242880
+media.upload.max-video-size=52428800
+media.upload.max-video-duration=120
+media.upload.allowed-image-types=image/jpeg,image/png,image/gif,image/webp
+media.upload.allowed-video-types=video/mp4,video/webm,video/quicktime
+
+# SPRING BOOT MULTIPART CONFIGURATION (same as dev)
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=51MB
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.location=${java.io.tmpdir}
