--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=blog01
 
 # Default profile (if none specified, use dev)
-spring.profiles.active=dev
+# spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 # JWT configuration (will be overridden by environment-specific files)
 app.jwt.issuer=01Blog
